--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon index.js"
+    "server": "nodemon index.js"
   },
 
 
